--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">jindal</string>
+    <string name="ac">Account Does Not Exist?? Create here</string>
 </resources>
